# image-formatting

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_libpng.sh  build_macos.sh
src/: decode_png.cpp  decode_png.h  opencv_scaling_generator.cpp  test_data_generator.cpp
test/: test_decode_png.cpp
